# szp_x_pad

./: CMakeLists.txt  partitions_szp.csv  sdkconfig  sdkconfig.old
main/: CMakeLists.txt  Kconfig.projbuild  idf_component.yml  main.c
main/assets/: font_szp_Harmony_12.c  font_szp_Harmony_14.c  font_szp_Harmony_16.c  font_szp_compass_24.c  font_szp_digital.c  gif_szp_duckyo.c  icon_szp_title_set.c  icon_szp_weather.c  img_szp_about.c  img_szp_back.c  img_szp_ble.c  img_szp_brightness.c  img_szp_compass.c  img_szp_compass_pointer.c  img_szp_gyro.c  img_szp_setting.c  img_szp_th.c  img_szp_th_pointer.c  img_szp_uart.c  img_szp_uart_send.c  img_szp_weather.c  img_szp_wifi.c  szp_assets_def.h
main/bluetooth/: szp_ble_gatts.c  szp_ble_gatts.h
main/common/: common_data.h  common_macro.h
main/core/: szp_config_def.h  szp_x_pad.c  szp_x_pad.h  work_controller.c  work_controller.h
main/demo/: _0_demo_main_.c  _1_demo_chip_info.c  _2_demo_gpio.c  _3_demo_uart.c  _4_demo_ble.c  _4_demo_ui.c  _5_demo_cam.c  _5_demo_timer.c  _6_demo_sntp.c  _7_demo_imu.c
main/drivers/: drv_manager.c  drv_manager.h  szp_cam.c  szp_cam.h  szp_i2c.c  szp_i2c.h  szp_ioext.c  szp_ioext.h  szp_key.c  szp_key.h  szp_lcd.c  szp_lcd.h  szp_touch.c  szp_touch.h  szp_uart.c  szp_uart.h
main/network/: network_manager.c  network_manager.h  szp_mqtt.c  szp_mqtt.h  szp_weather_api.c  szp_weather_api.h  szp_wifi.c  szp_wifi.h
main/sensor/: sensor_mg_qmc5883l.c  sensor_ps_qmi8658.c  sensor_th_gxhtc3.c  szp_sensor_def.h  szp_sensor_manager.c  szp_sensor_manager.h
main/storage/: storage_manager.c  (+2 more)
(+23 files in other folders)
